2006-09-03  Paul Eggert  <eggert@cs.ucla.edu>
	and Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/autoconf.texi (Limitations of Builtins): Document 'unset'
	bugs of Bash 2.01 and 2.05a.
	(Fortran Compiler): Document that AC_PROG_CC should be called
	before AC_PROG_FC, due to a bug in Autoconf.

2006-09-01  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: New macro AC_CACHE_CHECK_INT.  It replaces the
	old AC_COMPUTE_INT, which now behaves like _AC_COMPUTE_INT
	except the first two arguments are reversed.
	* doc/autoconf.texi (Caching Results): New macro AC_CACHE_CHECK_INT.
	(Generic Compiler Characteristics): AC_COMPUTE_INT no longer
	caches nor outputs a diagnostic.  Suggested by Bruno Haible.
	* lib/autoconf/general.m4 (AC_CACHE_CHECK_INT): New macro,
	equivalent to the old AC_COMPUTE_INT.
	(AC_COMPUTE_INT): No longer caches or reports.  New signature.
	All uses changed to AC_CACHE_CHECK_INT.
	* tests/base.at (AC_CACHE_CHECK_INT): New test.
	* tests/mktests.sh (ac_exclude_lsit): Add AC_CACHE_CHECK_INT.

2006-08-31  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: AC_FUNC_FNMATCH, AC_FUNC_FNMATCH_GNU, AC_FUNC_GETLOADVG,
	and AC_REPLACE_FNMATCH are now obsolescent in Autoconf.  New
	programs should use their Gnulib counterparts.
	* doc/autoconf.texi (Particular Functions): Likewise.
	(Macro Names, testsuite Invocation): Replace uses of these
	obsolete macros with uses of non-obsolete macros.

2006-08-29  Eric Blake  <ebb9@byu.net>

	* configure.ac (AC_INIT): Bump to 2.60b.
	* NEWS: Update.

2006-08-28  Eric Blake  <ebb9@byu.net>

	* lib/autoconf/headers.m4 (AC_HEADER_STAT): Fix logic that was
	mistakenly swapped on 2006-08-15.

2006-08-25  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Version 2.60a.

2006-08-25  Stepan Kasal  <kasal@ucw.cz>

	* lib/autoconf/general.m4 (_AC_LINK_IFELSE): Remove the IPA/IPO
	file created by the PGI compiler.

2006-08-25  Noah Misch  <noah@cs.caltech.edu>

	* lib/Autom4te/General.pm (END): Use `File::Path::rmtree' to
	simplify the code.
